--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="fav_name">Favoritos</string>
     <string name="favorite">Personagem favoritado com sucesso!</string>
     <string name="disfavor">Personagem desfavoritado!</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
